# claudekit

./: .gitignore  .shellcheckrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  config.schema.json  install.sh  pyproject.toml  setup.py
.ai/: AGENTS.md  AI_PROJECT_HANDOVER.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG_AI.md  CHECKLISTS.md  CODING_STANDARDS.md  COMMANDS.md  CONTEXT.md  DEBUGGING_GUIDE.md  DECISIONS.md  DEPENDENCIES.md  DEVELOPMENT_GUIDE.md  DOMAIN.md  FAQ.md  GLOSSARY.md  HOOKS.md  KNOWLEDGE_BASE.md  KNOWLEDGE_GRAPH.md  MEMORY.md  MIGRATION_GUIDE.md  MODEL_ONBOARDING.md  PERFORMANCE_GUIDE.md  PLAYBOOK.md  PROMPTS.md  README.md  REVIEW_GUIDE.md  ROADMAP.md  SECURITY_GUIDE.md  SESSION_STATE.md  SKILLS.md  STATUS.md  SYSTEM_OVERVIEW.md  TECH_DEBT.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  WORKFLOW.md
.claude/: settings.json
.claude/agents/: HANDOFF_PROTOCOL.md  QUICK_START.md  build-error-resolver.md  code-reviewer.md  code-simplifier.md  coordinator.md  database-architect.md  debugger.md  devops.md  doc-updater.md  documenter.md  explore.md  gitOps.md  harness-optimizer.md  implementer.md  loop-operator.md  model-router.md  opensource-packager.md  opensource-sanitizer.md  performance-optimizer.md  planner.md  python-reviewer.md  refactor-cleaner.md  reviewer.md  security-scanner.md  silent-failure-hunter.md  tdd-guide.md  tester.md  typescript-reviewer.md  verifier.md
.claude/commands/: adapt.md  audit.md  batch.md  blueprint.md  build-fix.md  code-review.md  context-budget.md  coordinator.md  debug.md  deploy.md  deps.md  doc-updater.md  docs.md  eval.md  explore.md  gan-build.md  git.md  hookify.md  implement.md  learn.md  loop-start.md  migrate.md  model-route.md  onboard.md  opensource.md  performance.md  plan.md  prp-commit.md  prp-implement.md  prp-plan.md  prp-pr.md  refine.md  resume-session.md  review.md  rollback.md  santa.md  save-session.md  security.md  test.md  verify.md
.claude/hooks/: README.md  block-no-verify.sh  command-guard.sh  command-log-audit.sh  commit-quality.sh  config-protection.sh  config.json  cost-tracker.sh  desktop-notify.sh  file-guard-gate.sh  format-typecheck.sh  injection-scan-gate.sh  lib.sh  ops-enforcement.sh  post-implement.sh  post-tool-use.sh  pre-commit.sh  pre-plan.sh  pre-push.sh  security-reminder.sh  session-start.sh  suggest-compact.sh
.claude/local/: CLAUDE.template.md  CONSTITUTION.template.md
.claude/plans/: blueprint-professional-upgrade.md  phase-1-HANDOFF.md  phase-1-fix-whats-broken.md  plan-context-budget-lazy-skills.md  plan-fable-behavior-corpus.md  plan-legacy-install-lifecycle.md
.claude/skills/: skills-registry.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: AGENTS.md  ARCHITECTURE.md  CONSTITUTION-GUIDE.md  CUSTOMIZATION.md  HOOKS.md  SKILLS.md  cli.md
evals/definitions/: implementer-no-fabrication.json  planner-delivers-artifacts.json  reviewer-refutes-and-formats.json  verifier-ground-truth.json
examples/python-fastapi/: CLAUDE.md  CONSTITUTION.md
examples/typescript-nextjs/: CLAUDE.md  CONSTITUTION.md
i18n/: README.ar.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.zh.md
review/: FINAL-REPORT.md  ai-review.md  architecture-review.md  code-review.md  developer-experience.md  documentation-review.md  missing-features.md  oss-excellence.md  performance-review.md  project-overview.md  roadmap.md  security-review.md  testing-review.md
review/tasks/: 001-fix-packaging-and-release.md  002-wire-security-layer.md  003-fix-hook-bugs-and-fail-closed.md  004-remove-dangerously-skip-permissions.md  005-installer-safety-and-update-command.md  006-version-and-docs-reconciliation.md  007-claude-code-plugin-packaging.md  008-consolidate-agents-and-skills.md  009-context-budget-reduction.md  010-eval-framework-for-assets.md  011-ci-hardening.md  012-test-suite-behavioral-upgrade.md  013-oss-community-health.md  014-supply-chain-hardening.md
scripts/: gen-docs.py  gen-registry.py  run-evals.py
src/cli/: main.py
templates/: .agentignore
tests/: requirements.txt  test_behavior_spec.py  test_checkpoint.py  test_cli.py  test_evals.py  test_extract.py  test_hooks_behavioral.py  test_i18n.py  test_install.py  test_mcp.py  test_modes.py  test_new_commands.py  test_new_skills.py  test_packaging.py  test_registry.py  test_security.py  test_security_hooks.py  test_spec_driven.py  test_structure.py  test_validator.py
(+150 files in other folders)
