[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claudekit"
version = "2.0.0"
description = "Production-grade multi-agent orchestration system for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Omar Mokhtar", email = "omar@claudekit.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
claudekit = "src.cli.main:main"
ck = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/OmarMokhtar-Saad/claudekit"
Repository = "https://github.com/OmarMokhtar-Saad/claudekit"
Documentation = "https://github.com/OmarMokhtar-Saad/claudekit/tree/main/docs"
Issues = "https://github.com/OmarMokhtar-Saad/claudekit/issues"

[tool.setuptools.packages.find]
include = ["src*"]
