[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claudekit"
version = "2.1.0"
description = "Production-grade multi-agent orchestration system for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Omar Mokhtar", email = "omar@claudekit.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
validation = ["jsonschema>=4"]
dev = ["pytest", "pytest-timeout", "coverage"]

[project.scripts]
claudekit = "claudekit.cli.main:main"
ck = "claudekit.cli.main:main"

[project.urls]
Homepage = "https://github.com/OmarMokhtar-Saad/claudekit"
Repository = "https://github.com/OmarMokhtar-Saad/claudekit"
Documentation = "https://github.com/OmarMokhtar-Saad/claudekit/tree/main/docs"
Issues = "https://github.com/OmarMokhtar-Saad/claudekit/issues"

[tool.setuptools.packages.find]
where = ["src"]
